# paper2manim

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Justfile  PAPER2MANIM.md  README.md  app.py  app.py.ignore  cli.py  cli_fallback.py  cli_launcher.py  pipeline_runner.py  pyproject.toml  requirements.txt  run_check.py  test_css.py  test_scene.py  workspace.py
.github/workflows/: ci.yml
agents/: coder.py  config.py  pipeline.py  planner.py  planner_math2manim.py  stages.py  validation.py
cli/: package-lock.json  package.json
cli/src/: App.tsx  cli.tsx  index.ts
mcp/: package-lock.json  package.json  server.js
output/dot_product_1772932237/: project_state.json
output/dot_product_1772937185/: project_state.json
output/dot_product_1772939638/: project_state.json
output/dot_product_2000/: project_state.json
paper2manim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: manual_tool_test.py  test_api.py  test_config_and_caching.py  test_frag.py  test_input_validation.py  test_media_assembler.py  test_pipeline_progress_streaming.py  test_pipeline_quality_repairs.py  test_pipeline_resumability.py  test_pipeline_runner_questionnaire.py  test_planner_math2manim.py  test_project_state.py  test_stage_names.py  test_subtitle_generator.py  test_visual_critique.py
utils/: code_verifier.py  css_toggle.py  golden_scenes.py  llm_provider.py  manim_docs.py  manim_runner.py  media_assembler.py  parallel_renderer.py  project_state.py  subtitle_generator.py  tts_engine.py  visual_critique.py  web_search.py
(+82 files in other folders)
